--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
     </section>
     <section id="contact">
         <h2>Contact</h2>
-        <form id="contactForm">
-            <input type="text" id="name" name="name" placeholder="Your Name" required>
-            <input type="email" id="email" name="email" placeholder="Your Email" required>
-            <textarea id="message" name="message" placeholder="Your Message" required></textarea>
+        <form action="https://formspree.io/f/xdkdpony" method="POST">
+            <input type="text" name="name" placeholder="Your Name" required>
+            <input type="email" name="email" placeholder="Your Email" required>
+            <textarea name="message" placeholder="Your Message" required></textarea>
             <button type="submit">Send</button>
         </form>
         <div id="formMessage"></div>
