--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
             <li>Telecommunications equipment installation</li>
             <li>Hardware installation & diagnostics</li>
             <li>Data Analysis</li>
+            <li>Automation</li>
+            <li>AI Tools Utilization</li>
+            <li>Power BI</li>
             <li>BASH Script</li>
             <li>Git</li>
             <li>Docker</li>
@@ -77,14 +80,16 @@
         <ul>
             <li><strong></strong>B.A in Electrical Engineering (Communication Engineering)</strong> <a href="https://drive.google.com/file/d/1VeEj6vh1w_aHG5X2A9USVcFgBVgDXqR6/view?usp=sharing" target="_blank">[certificate]</a></li>
             <li><strong>Microsoft Certified: Azure Fundamentals</strong> <a href="https://learn.microsoft.com/api/credentials/share/en-us/mustafaabdelazim/868AEAFACC7E2E92?sharingId" target="_blank">[certificate]</a></li>
+            <li><strong>Microsoft Power BI Data Analyst Professional Certificate</strong> <a href="https://www.credly.com/badges/434d41cc-47b5-46ad-9d12-d3d99b61f267/linked_in_profile" target="_blank">[certificate]</a></li>
+            <li><strong>n8n Course Level 2</strong> <a href="https://community.n8n.io/badges/105/completed-n8n-course-level-2?username=mustafaazim" target="_blank">[certificate]</a></li>
             <li><strong>Robotic Process Automation (RPA)</strong> <a href="https://coursera.org/share/a46d4162e40041a1e1806c0adaf22a6f" target="_blank">[certificate]</a></li>
             <li><strong>AWS Cloud Support Associate</strong> <a href="https://coursera.org/share/e01a6935b7e0b5e2aca4a93eea5c6403" target="_blank">[certificate]</a></li>
             <li><strong>AWS IoT Business Opportunities for Telecom Operators</strong> <a href="https://drive.google.com/file/d/17rmCV1T8ljvXLVNr1rEcjf_6gP4yQN5t/view?usp=sharing" target="_blank">[certificate]</a></li>
             <li><strong>AWS Cloud Technical Essentials</strong> <a href="https://courses.edx.org/certificates/7123f41381d04b3a846a381aea17cf77" target="_blank">[certificate]</a></li>
             <li><strong>Relational Database</strong> <a href="https://www.freecodecamp.org/certification/fccc0719c3a-cbe2-4185-a5a1-a8aa96010d65/relational-database-v8" target="_blank">[certificate]</a></li>
             <li><strong>Foundational C# with Microsoft</strong> <a href="https://www.freecodecamp.org/certification/fccc0719c3a-cbe2-4185-a5a1-a8aa96010d65/foundational-c-sharp-with-microsoft" target="_blank">[certificate]</a></li>
-            <li>CCNA Security, NETWORK PLUS TRAINING CENTER</li>
-            <li>Huawei Certified ICT Associate - Routing & Switching (HCIA), NETWORK PLUS TRAINING CENTER</li>
+            <li><strong>Security, NETWORK PLUS TRAINING CENTER</strong><a href="https://drive.google.com/file/d/1OZluAvU8x-oX6Hptwm4XvlC0kIUvBQeG/view?usp=drive_link" target="_blank">[certificate]</a></li>
+            <li><strong>Certified ICT Associate - Routing & Switching (HCIA), NETWORK PLUS TRAINING CENTER</strong><a href="https://drive.google.com/file/d/1qP-97dGnk4vl1AUZ2W6xu9iToumkWzSL/view?usp=sharing" target="_blank">[certificate]</a></li>
         </ul>
 
     </section>
@@ -117,6 +122,24 @@
                     <li>Provisioned EFS file system and copied metadata.</li>
                     <li>Configured Application Load Balancer in LabVPC/public subnets, set up security groups and listeners.</li>
                     <li>Created Auto Scaling group, verified target groups, and tested application server via load balancer.</li>
+                
+            </div>
+            <div class="project">
+                <h3>AI Agent Assistant — Multi-Agent Workflow</h3>
+                <p><strong>Scenario:</strong> This project is an **AI-powered multimodal assistant** (Text, Voice, Image) built using **n8n** and integrated with **Telegram Bot**<br>
+                <strong>Objectives:</strong>
+                <ul>
+                    <li>Web Search Agent — for online search.</li>
+                    <li>Email Agent — for managing emails</li>
+                    <li>Calendar Agent — for scheduling and managing events</li>
+                </ul>
+                <strong>Key Steps:</strong>
+                <ul>
+                    <li> Receive and process Telegram messages (Text / Voice / Image).</li>
+                    <li>Automatic voice transcription (Speech-to-Text).</li>
+                    <li>Image recognition or OCR processing.</li>
+                    <li>Intelligent orchestration between multiple specialized agents.</li>
+                    <li>Text and (optional) voice responses.</li>
                 
             </div>
         </div>
