Add AI Agent Developer certificate to index.html

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
             <li><strong></strong>B.A in Electrical Engineering (Communication Engineering)</strong> <a href="https://drive.google.com/file/d/1VeEj6vh1w_aHG5X2A9USVcFgBVgDXqR6/view?usp=sharing" target="_blank">[certificate]</a></li>
             <li><strong>Microsoft Certified: Azure Fundamentals</strong> <a href="https://learn.microsoft.com/api/credentials/share/en-us/mustafaabdelazim/868AEAFACC7E2E92?sharingId" target="_blank">[certificate]</a></li>
             <li><strong>Microsoft Power BI Data Analyst Professional Certificate</strong> <a href="https://www.credly.com/badges/434d41cc-47b5-46ad-9d12-d3d99b61f267/linked_in_profile" target="_blank">[certificate]</a></li>
+            <li><strong>AI Agent Developer </strong> <a href="https://coursera.org/share/e3b6a8afe75ceb4fc1ae82e382824b00" target="_blank">[certificate]</a></li>
             <li><strong>n8n Course Level 2</strong> <a href="https://community.n8n.io/badges/105/completed-n8n-course-level-2?username=mustafaazim" target="_blank">[certificate]</a></li>
             <li><strong>Robotic Process Automation (RPA)</strong> <a href="https://coursera.org/share/a46d4162e40041a1e1806c0adaf22a6f" target="_blank">[certificate]</a></li>
             <li><strong>AWS Cloud Support Associate</strong> <a href="https://coursera.org/share/e01a6935b7e0b5e2aca4a93eea5c6403" target="_blank">[certificate]</a></li>
