--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
             <div class="nav-card" onclick="location.href='#contact'">
                 <span>Contact</span>
             </div>
-            <div class="nav-card" onclick="location.href='#cv'">
-                <span>CV / Download</span>
-            </div>
         </div>
     </header>
     <section id="about">
@@ -34,7 +31,7 @@
         <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/mustafa-abdazim-4a652311b?trk=contact-info" target="_blank">mustafa-abdazim</a></p>
         <h3>Professional Summary</h3>
         <p>Telecommunications Engineer with over six years of experience in the technology and telecommunication sector, with a strong focus on data analysis, automation, and cloud computing. Skilled in problem analysis and providing innovative technological solutions that enhance operational efficiency and data-driven decision-making. Proficient in cloud services, data analysis, and process automation, aiming to leverage these skills to support organizations in their digital transformation journey.</p>
-        <h3>Skills</h3>
+        <!--<h3>Skills</h3>
         <ul>
             <li>Cloud services integration</li>
             <li>Network design and implementation</li>
@@ -46,13 +43,10 @@
             <li>Telecommunications equipment installation</li>
             <li>Hardware installation & diagnostics</li>
             <li>Data Analysis</li>
-            <li>Automation</li>
-            <li>AI Tools Utilization</li>
-            <li>Power BI</li>
             <li>BASH Script</li>
             <li>Git</li>
             <li>Docker</li>
-        </ul>
+        </ul>-->
         <h3>Work Experience</h3>
         <ul>
             <li><strong>Telecom Engineer</strong>, SEA PORT CORPORATION (10/2017 - 04/2023)
@@ -78,23 +72,78 @@
         </ul>
 <h3>Certificates</h3>
         <ul>
-            <li><strong></strong>B.A in Electrical Engineering (Communication Engineering)</strong> <a href="https://drive.google.com/file/d/1VeEj6vh1w_aHG5X2A9USVcFgBVgDXqR6/view?usp=sharing" target="_blank">[certificate]</a></li>
+            <li><strong>B.A in Electrical Engineering (Communication Engineering)</strong> <a href="https://drive.google.com/file/d/1VeEj6vh1w_aHG5X2A9USVcFgBVgDXqR6/view?usp=sharing" target="_blank">[certificate]</a></li>
             <li><strong>Microsoft Certified: Azure Fundamentals</strong> <a href="https://learn.microsoft.com/api/credentials/share/en-us/mustafaabdelazim/868AEAFACC7E2E92?sharingId" target="_blank">[certificate]</a></li>
-            <li><strong>Microsoft Power BI Data Analyst Professional Certificate</strong> <a href="https://www.credly.com/badges/434d41cc-47b5-46ad-9d12-d3d99b61f267/linked_in_profile" target="_blank">[certificate]</a></li>
-            <li><strong>AI Agent Developer </strong> <a href="https://coursera.org/share/e3b6a8afe75ceb4fc1ae82e382824b00" target="_blank">[certificate]</a></li>
-            <li><strong>n8n Course Level 2</strong> <a href="https://community.n8n.io/badges/105/completed-n8n-course-level-2?username=mustafaazim" target="_blank">[certificate]</a></li>
-            <li><strong>Robotic Process Automation (RPA)</strong> <a href="https://coursera.org/share/a46d4162e40041a1e1806c0adaf22a6f" target="_blank">[certificate]</a></li>
             <li><strong>AWS Cloud Support Associate</strong> <a href="https://coursera.org/share/e01a6935b7e0b5e2aca4a93eea5c6403" target="_blank">[certificate]</a></li>
-            <li><strong>AWS IoT Business Opportunities for Telecom Operators</strong> <a href="https://drive.google.com/file/d/17rmCV1T8ljvXLVNr1rEcjf_6gP4yQN5t/view?usp=sharing" target="_blank">[certificate]</a></li>
             <li><strong>AWS Cloud Technical Essentials</strong> <a href="https://courses.edx.org/certificates/7123f41381d04b3a846a381aea17cf77" target="_blank">[certificate]</a></li>
+            <li><strong>Microsoft Power BI Data Analyst Professional Certificate</strong> <a href="https://www.credly.com/badges/434d41cc-47b5-46ad-9d12-d3d99b61f267/linked_in_profile" target="_blank">[certificate]</a></li>
+            <li><strong>AI Agent Developer</strong> <a href="https://coursera.org/share/e3b6a8afe75ceb4fc1ae82e382824b00" target="_blank">[certificate]</a></li>
+            <li><strong>Robotic Process Automation (RPA)</strong> <a href="https://coursera.org/share/a46d4162e40041a1e1806c0adaf22a6f" target="_blank">[certificate]</a></li>            
+            <li><strong>n8n Level 2 Certification</strong> <a href="https://community.n8n.io/badges/105/completed-n8n-course-level-2?username=mustafaazim" target="_blank">[certificate]</a></li>
+            <!--<li><strong></strong> <a href="" target="_blank">[certificate]</a></li>-->            
+            <li><strong>AWS IoT Business Opportunities for Telecom Operators</strong> <a href="https://drive.google.com/file/d/17rmCV1T8ljvXLVNr1rEcjf_6gP4yQN5t/view?usp=sharing" target="_blank">[certificate]</a></li>            
             <li><strong>Relational Database</strong> <a href="https://www.freecodecamp.org/certification/fccc0719c3a-cbe2-4185-a5a1-a8aa96010d65/relational-database-v8" target="_blank">[certificate]</a></li>
             <li><strong>Foundational C# with Microsoft</strong> <a href="https://www.freecodecamp.org/certification/fccc0719c3a-cbe2-4185-a5a1-a8aa96010d65/foundational-c-sharp-with-microsoft" target="_blank">[certificate]</a></li>
-            <li><strong>Security, NETWORK PLUS TRAINING CENTER</strong><a href="https://drive.google.com/file/d/1OZluAvU8x-oX6Hptwm4XvlC0kIUvBQeG/view?usp=drive_link" target="_blank">[certificate]</a></li>
-            <li><strong>Certified ICT Associate - Routing & Switching (HCIA), NETWORK PLUS TRAINING CENTER</strong><a href="https://drive.google.com/file/d/1qP-97dGnk4vl1AUZ2W6xu9iToumkWzSL/view?usp=sharing" target="_blank">[certificate]</a></li>
+            <li>CCNA Security, NETWORK PLUS TRAINING CENTER</li>
+            <li>Huawei Certified ICT Associate - Routing & Switching (HCIA), NETWORK PLUS TRAINING CENTER</li>
         </ul>
 
     </section>
-
+    <section id="technical-skills">
+        <h2>Technical Skills</h2>
+        <div class="skills-grid">
+            <div class="skill">
+                <h3>Cloud Platforms</h3>
+                <ul>
+                    <li>AWS</li>
+                    <li>Microsoft Azure</li>
+                </ul>
+            </div>
+            <div class="skill">
+                <h3>Automation Tools</h3>
+                <ul>
+                    <li>n8n</li>
+                    <li>Robotic Process Automation (RPA)</li>
+                    <li>Power BI</li>
+                </ul>
+            </div>
+            <div class="skill">
+                <h3>Networking</h3>
+                <ul>
+                    <li>Network Design &amp; Implementation</li>
+                    <li>IP Routing/Switching</li>
+                    <li>CCNA Security</li>
+                    <li>HCIA Routing &amp; Switching</li>
+                    <li>Microwave Communication</li>
+                </ul>
+            </div>
+            <div class="skill">
+                <h3>Programming</h3>
+                <ul>
+                    <li>BASH Scripting</li>
+                    <li>C#</li>
+                    <li>SQL</li>
+                    <li>Relational Databases</li>
+                </ul>
+            </div>
+            <div class="skill">
+                <h3>AI &amp; Analytics</h3>
+                <ul>
+                    <li>AI Tools</li>
+                    <li>Data Analysis</li>
+                    <li>Power BI</li>
+                </ul>
+            </div>
+            <div class="skill">
+                <h3>Telecom Hardware</h3>
+                <ul>
+                    <li>Equipment Installation</li>
+                    <li>Diagnostics</li>
+                    <li>System Configuration</li>
+                </ul>
+            </div>
+        </div>
+    </section>
     <section id="projects">
         <h2>Projects</h2>
         <div class="project-list">
@@ -119,31 +168,13 @@
                     <li>Created Auto Scaling group, verified target groups, and tested application server via load balancer.</li>
                 
             </div>
-            <div class="project">
-                <h3>AI Agent Assistant — Multi-Agent Workflow</h3>
-                <p><strong>Scenario:</strong> This project is an **AI-powered multimodal assistant** (Text, Voice, Image) built using **n8n** and integrated with **Telegram Bot**<br>
-                <strong>Objectives:</strong>
-                <ul>
-                    <li>Web Search Agent — for online search.</li>
-                    <li>Email Agent — for managing emails</li>
-                    <li>Calendar Agent — for scheduling and managing events</li>
-                </ul>
-                <strong>Key Steps:</strong>
-                <ul>
-                    <li> Receive and process Telegram messages (Text / Voice / Image).</li>
-                    <li>Automatic voice transcription (Speech-to-Text).</li>
-                    <li>Image recognition or OCR processing.</li>
-                    <li>Intelligent orchestration between multiple specialized agents.</li>
-                    <li>Text and (optional) voice responses.</li>
-                
-            </div>
         </div>
     </section>
     <section id="contact">
         <h2>Contact</h2>
-        <form id="contactForm" action="https://formspree.io/f/xdkdpony" method="POST">
-            <input id="name" type="text" name="name" placeholder="Your Name" required>
-            <input id="email" type="email" name="email" placeholder="Your Email" required>
+        <form id="contactForm">
+            <input type="text" id="name" name="name" placeholder="Your Name" required>
+            <input type="email" id="email" name="email" placeholder="Your Email" required>
             <textarea id="message" name="message" placeholder="Your Message" required></textarea>
             <button type="submit">Send</button>
         </form>
