Add AI Agent Assistant project information
Added project details for AI Agent Assistant including objectives and key steps.

--- a/index.html
+++ b/index.html
@@ -168,6 +168,24 @@
                     <li>Created Auto Scaling group, verified target groups, and tested application server via load balancer.</li>
                 
             </div>
+            <div class="project">
+                <h3>AI Agent Assistant — Multi-Agent Workflow</h3>
+                <p><strong>Scenario:</strong> This project is an **AI-powered multimodal assistant** (Text, Voice, Image) built using **n8n** and integrated with **Telegram Bot**<br>
+                <strong>Objectives:</strong>
+                <ul>
+                    <li>Web Search Agent — for online search.</li>
+                    <li>Email Agent — for managing emails</li>
+                    <li>Calendar Agent — for scheduling and managing events</li>
+                </ul>
+                <strong>Key Steps:</strong>
+                <ul>
+                    <li> Receive and process Telegram messages (Text / Voice / Image).</li>
+                    <li>Automatic voice transcription (Speech-to-Text).</li>
+                    <li>Image recognition or OCR processing.</li>
+                    <li>Intelligent orchestration between multiple specialized agents.</li>
+                    <li>Text and (optional) voice responses.</li>
+                
+            </div>
         </div>
     </section>
     <section id="contact">
